// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`microsoft-foundry/models/deploy-model/preset - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Intelligently deploys Azure OpenAI models to optimal regions by analyzing capacity across all available regions. Automatically checks current region first and shows alternatives if needed. USE FOR: quick deployment, optimal region, best region, automatic region selection, fast setup, multi-region capacity check, high availability deployment, deploy to best location. DO NOT USE FOR: custom SKU selection (use customize), specific version selection (use customize), custom capacity configuration (use customize), PTU deployments (use customize).
",
  "extractedKeywords": [
    "across",
    "alternatives",
    "analyzing",
    "authentication",
    "automatic",
    "automatically",
    "availability",
    "available",
    "azure",
    "best",
    "capacity",
    "check",
    "checks",
    "cli",
    "configuration",
    "current",
    "custom",
    "customize",
    "deploy",
    "deployment",
    "deployments",
    "deploys",
    "entra",
    "fast",
    "first",
    "high",
    "intelligently",
    "location",
    "models",
    "monitor",
    "multi-region",
    "needed",
    "openai",
    "optimal",
    "preset",
    "quick",
    "region",
    "regions",
    "selection",
    "setup",
    "shows",
    "specific",
    "version",
  ],
  "name": "preset",
}
`;

exports[`microsoft-foundry/models/deploy-model/preset - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "across",
  "alternatives",
  "analyzing",
  "authentication",
  "automatic",
  "automatically",
  "availability",
  "available",
  "azure",
  "best",
  "capacity",
  "check",
  "checks",
  "cli",
  "configuration",
  "current",
  "custom",
  "customize",
  "deploy",
  "deployment",
  "deployments",
  "deploys",
  "entra",
  "fast",
  "first",
  "high",
  "intelligently",
  "location",
  "models",
  "monitor",
  "multi-region",
  "needed",
  "openai",
  "optimal",
  "preset",
  "quick",
  "region",
  "regions",
  "selection",
  "setup",
  "shows",
  "specific",
  "version",
]
`;
